# upmem-sdk

backends/: CMakeLists.txt
backends/api/: CMakeLists.txt
backends/api/include/: dpu.h  dpu_config.h  dpu_description.h  dpu_error.h  dpu_pcb_transformation.h  dpu_program.h  dpu_types.h
backends/api/src/: dpu_config.c  dpu_custom.c  dpu_debug.c  dpu_elf.c  dpu_error.c  dpu_internals.c  dpu_loader.c  dpu_log.c  dpu_management.c  dpu_memory.c  dpu_profiler.c  dpu_program.c  dpu_rank_handler_allocator.c  dpu_runner.c  runtime_info.c  ufi_utils.c
backends/api/src/api/: dpu.c  java_api.c
backends/api/src/include/: dpu_elf_internals.h  dpu_internals.h  runtime_info.h  ufi_utils.h
backends/cmake/modules/: FindLibFtdi.cmake
backends/commons/include/: dpu_helpers.h  dpu_rank.h  dpu_rank_handler.h  dpu_ufi.h  dpu_ufi_types.h
backends/commons/src/: dpu_chip_description.c  dpu_instruction_encoder.h  dpu_predef_programs.c
backends/commons/src/helpers/: dpu_helpers.c
backends/commons/src/pcb/: dpu_pcb_transformation.c
backends/commons/src/properties/: dpu_profile.h  dpu_properties.c
backends/commons/src/types/: dpu_types.c
backends/host-lldb-attach-dpu/: CMakeLists.txt  lldb-attach-dpu.c
backends/hw/: CMakeLists.txt
backends/hw/src/commons/: dpu_module_compatibility.h  dpu_rank_ioctl.h  dpu_region_address_translation.h
backends/hw/src/mappings/fpga_aws/user/: fpga_aws_translation.c
backends/hw/src/mappings/power9/user/: power9_translation.c
backends/hw/src/mappings/xeon_sp/user/: xeon_sp_translation.c
backends/hw/src/rank/: fpga_ila.c  hw_dpu_rank.c  hw_dpu_sysfs.c  hw_dpu_sysfs.h
backends/ufi/: .clang-format-pattern  CMakeLists.txt
backends/ufi/src/: dpu_commands.h  dpu_commands_trace.h  dpu_operation.c  dpu_operation.h  dpu_operation_to_command.c  dpu_operation_type.h  dpu_operation_type_dump.c  dpu_packet.h  dpu_planner.c  dpu_query.c  dpu_query.h  dpu_query_constructors.c  dpu_query_constructors.h  dpu_query_parameters.h  dpu_query_parameters_dump.c  dpu_query_result_dump.c  dpu_query_result_update.c  dpu_query_target_dump.c  dpu_query_to_operations.c  dpu_query_type.h  dpu_query_type_dump.c  dpu_transaction.c  dpu_transaction.h  list.h  ufi.c  ufi_bit_config.c  ufi_ci.c  ufi_rank_utils.h
backends/verbose/: CMakeLists.txt
backends/verbose/src/: static_verbose.c  verbose_control.c  verbose_control.h  verbose_profile.c
dpu-rt/: CMakeLists.txt
dpu-rt/src/misc/: crt0.c
dpu-rt/src/stdlib/: memcpy.c  memmove.c  memset.c  stdio.c
dpu-rt/src/syslib/: alloc.c  defs.c  fsb_allocator.c  mul64.c  perfcounter.c  seqread.h  seqread.inc  seqread128.c  seqread256.c  seqread32.c  seqread64.c  sysdefs.S
